[gd_scene load_steps=25 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://fish.gd" type="Script" id=2]
[ext_resource path="res://follower.gd" type="Script" id=3]
[ext_resource path="res://Label.gd" type="Script" id=4]
[ext_resource path="res://world.gd" type="Script" id=5]
[ext_resource path="res://azure.png" type="Texture" id=6]
[ext_resource path="res://flop.png" type="Texture" id=7]
[ext_resource path="res://background.png" type="Texture" id=8]
[ext_resource path="res://palmtree.png" type="Texture" id=9]
[ext_resource path="res://dune.png" type="Texture" id=10]
[ext_resource path="res://font.tres" type="DynamicFont" id=11]
[ext_resource path="res://score_label.gd" type="Script" id=12]
[ext_resource path="res://arrow.png" type="Texture" id=13]
[ext_resource path="res://azurereminder.png" type="Texture" id=14]
[ext_resource path="res://FORTE.TTF" type="DynamicFontData" id=15]
[ext_resource path="res://pause.gd" type="Script" id=16]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 1000, 400 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1000, 0, 1000, 400 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2000, 0, 1000, 400 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 3000, 0, 1000, 400 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 4 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "flop",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="DynamicFont" id=7]
size = 70
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=8]
size = 70
font_data = ExtResource( 15 )

[node name="world" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_vertical_guides_": [ -1215.0, 2173.0 ]
}

[node name="timeleft" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -1156.0
margin_top = 163.0
margin_right = 2351.0
margin_bottom = 625.0
rect_pivot_offset = Vector2( 125, 110 )
color = Color( 0.286275, 0.74902, 0.686275, 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 480, -480 )
scale = Vector2( 2.20667, 2.20667 )
texture = ExtResource( 8 )

[node name="follower" type="Node2D" parent="."]
visible = false
position = Vector2( 244, 105 )
script = ExtResource( 3 )

[node name="Icon" type="Sprite" parent="follower"]
self_modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="follower2" type="Node2D" parent="."]
visible = false
position = Vector2( 244, 105 )
script = ExtResource( 3 )
offset = 240.0

[node name="Icon" type="Sprite" parent="follower2"]
self_modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="surface" type="Node2D" parent="."]
position = Vector2( 1, 143 )

[node name="fish" type="KinematicBody2D" parent="."]
position = Vector2( 504, 285 )
script = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="fish"]
scale = Vector2( 0.2, 0.2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="fish"]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 6 )
frame = 3
playing = true

[node name="Sprite" type="Sprite" parent="fish"]
visible = false
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="fish"]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="fish"]
offset = Vector2( 0, -200 )
current = true
limit_left = -1200
limit_right = 2100

[node name="floptime" type="Timer" parent="fish"]
wait_time = 0.5
one_shot = true

[node name="afterbounce" type="Tween" parent="fish"]

[node name="boostcool" type="Timer" parent="fish"]
wait_time = 0.5
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1195.0
margin_top = 143.0
margin_right = 2180.0
margin_bottom = 605.0
rect_pivot_offset = Vector2( 125, 110 )
color = Color( 0.270588, 0.333333, 1, 0.188235 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = -1155.0
margin_top = 546.0
margin_right = 2220.0
margin_bottom = 1008.0
rect_pivot_offset = Vector2( 125, 110 )
color = Color( 1, 0.905882, 0.588235, 1 )

[node name="fade" type="ColorRect" parent="."]
margin_left = -1180.0
margin_top = -1347.0
margin_right = 2329.0
margin_bottom = 591.0
rect_pivot_offset = Vector2( 125, 110 )
color = Color( 1, 1, 1, 0.188235 )

[node name="hud" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="hud"]
visible = false
margin_right = 52.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 11 )
text = "asdasd"
script = ExtResource( 4 )

[node name="0" type="VBoxContainer" parent="hud"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -100.0
margin_right = 40.0
margin_bottom = 100.0
alignment = 1

[node name="1" type="VBoxContainer" parent="hud"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -100.0
margin_bottom = 100.0
alignment = 1

[node name="time" type="Label" parent="hud"]
margin_right = 53.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 11 )
text = "0"

[node name="score_label" type="Label" parent="hud"]
margin_top = 74.0
margin_right = 53.0
margin_bottom = 184.0
custom_fonts/font = ExtResource( 11 )
text = "Score: 0"
script = ExtResource( 12 )

[node name="leftremind" type="Control" parent="hud"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="hud/leftremind"]
margin_left = 50.0
margin_top = 473.0
margin_right = 140.0
margin_bottom = 563.0
texture = ExtResource( 14 )

[node name="TextureRect2" type="TextureRect" parent="hud/leftremind"]
margin_left = 15.0
margin_top = 498.0
margin_right = 55.0
margin_bottom = 538.0
texture = ExtResource( 13 )

[node name="rightremind" type="Control" parent="hud"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="TextureRect3" type="TextureRect" parent="hud/rightremind"]
margin_left = 895.0
margin_top = 473.0
margin_right = 985.0
margin_bottom = 563.0
texture = ExtResource( 14 )

[node name="TextureRect4" type="TextureRect" parent="hud/rightremind"]
margin_left = 979.0
margin_top = 498.0
margin_right = 1019.0
margin_bottom = 538.0
texture = ExtResource( 13 )
flip_h = true

[node name="pause" type="Control" parent="hud"]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -261.5
margin_top = -169.5
margin_right = 261.5
margin_bottom = 169.5
script = ExtResource( 16 )

[node name="Panel" type="Panel" parent="hud/pause"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="hud/pause"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -152.0
margin_right = 152.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 11 )
text = "Paused"

[node name="VBoxContainer" type="VBoxContainer" parent="hud/pause"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -189.5
margin_top = -202.5
margin_right = 189.5
margin_bottom = -32.5

[node name="Button" type="Button" parent="hud/pause/VBoxContainer"]
margin_right = 379.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 7 )
text = "Resume"

[node name="Button2" type="Button" parent="hud/pause/VBoxContainer"]
margin_top = 87.0
margin_right = 379.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 8 )
text = "Main Menu"

[node name="edge" type="Node2D" parent="."]

[node name="dune" type="Sprite" parent="edge"]
position = Vector2( -1117, 384 )
texture = ExtResource( 10 )

[node name="tree2" type="Sprite" parent="edge"]
position = Vector2( -945, 12 )
rotation = 0.326688
texture = ExtResource( 9 )
flip_h = true

[node name="tree" type="Sprite" parent="edge"]
position = Vector2( -1046, -187 )
rotation = 0.159782
texture = ExtResource( 9 )
flip_h = true

[node name="edge2" type="Node2D" parent="."]
position = Vector2( 2921, 0 )

[node name="dune" type="Sprite" parent="edge2"]
position = Vector2( -975, 355 )
texture = ExtResource( 10 )
flip_h = true

[node name="tree" type="Sprite" parent="edge2"]
position = Vector2( -1046, -187 )
rotation = 0.159782
texture = ExtResource( 9 )

[node name="tree2" type="Sprite" parent="edge2"]
position = Vector2( -1150, -19 )
rotation = 0.326688
texture = ExtResource( 9 )

[connection signal="timeout" from="timeleft" to="." method="_on_timeleft_timeout"]
[connection signal="screen_entered" from="fish/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="fish/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="fish/floptime" to="fish" method="_on_floptime_timeout"]
[connection signal="pressed" from="hud/pause/VBoxContainer/Button" to="hud/pause" method="_on_Button_pressed"]
[connection signal="pressed" from="hud/pause/VBoxContainer/Button2" to="hud/pause" method="_on_Button2_pressed"]
